# reranker-service

./: .dockerignore  .env.dev  .env.minimal  .env.production  .gitignore  Dockerfile  Dockerfile.alt  ENV_VARIABLES.md  README.md  app.py  build.sh  pyproject.toml  request.txt   requirements.txt  set_remote.sh
src/: __init__.py
src/reranker_service/: api.py  config.py  service.py
src/reranker_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
