[project]
name = "reranker-service"
version = "0.1.0"
description = "Memory-optimized reranker service for 512MB servers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sentence-transformers>=2.6",
    "torch>=2.0.0",
    "cachetools>=5.3",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
