[project]
name = "reranker-service"
version = "0.1.0"
description = "Memory-optimized reranker service for 512MB servers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "uvloop>=0.17.0",
    "httptools>=0.6.0",
    "sentence-transformers>=2.6",
    "torch>=2.0.0",
    "cachetools>=5.3",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "huggingface-hub[cli]>=0.35.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "isort>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
